.eng/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-rag-front
  labels:
    app: code-rag-front
spec:
  selector:
    app: code-rag-front
  ports:
    - name: http
      port: 80
      targetPort: http
